Fixed UI issues

--- a/game_page.html
+++ b/game_page.html
@@ -13,15 +13,15 @@
         <div class="score-box">
             <div class="o">
                 <i class="fa-solid fa-o"></i>
-                <p><input type="number" disabled>Wins</p>
+                <p><span>0</span> Wins</p>
             </div>
             <div class="x">
                 <i class="fa-solid fa-x"></i>
-                <p><input type="number" disabled>Wins</p>
+                <p><span>0</span> Wins</p>
             </div>
             <div class="draw">
                 <i class="fa-solid fa-scale-balanced"></i>
-                <p><input type="number" disabled>Draws</p>
+                <p><span>0</span> Draws</p>
             </div>
         </div>
         <div class="game-box">
